--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "backend": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "raktim",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
